5/9/11 #2862, reimplement color intensity slider in phetgraphics, so that it scales
Added a (commented-out) solution for making sure the simulation panel comes up at the right size initially, even on low-res platforms such as netbooks, see #2860
Removed the gray panel on the right, which had no controls in it
# 1.03.00 (37985) Jan 8, 2010
1/8/10 public version for milestone "full redeploy, 2010 Q1"
# 1.02.01 (37340) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.02.00 (30589) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30588
# 1.01.03 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.01.02 (28781) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 1.01.01 (25780)
11/3/08 - publish version that uses phetcommon trunk (work done on 5/15/08)
10/8/08 - use PhetApplicationConfig.launchSim
5/20/08 - replace "Sans Serif" fonts with PhetFont, use explicit calls to new PhetFont throughout
5/15/08 - load all localized strings statically in ColorVisionStrings
5/15/08 - move slider labels up 10 pixels, they were a bit crowded
5/15/08 - add phetgraphics and piccolo-phet dependencies to build file
> use fancier tabs for switching panels
5/15/08 - upgrade to Piccolo tabs
5/15/08 - add About dialog credits
5/15/08 - add hand cursor to sliders in RGB panel
5/15/08 - replace SimStrings.get with PhetResources.getString
5/15/08 - add PhetApplicationConfig and PhetLookAndFeel
5/15/08 - port to SVN trunk versions of phetcommon and phetgraphics (delete project-specific copies)
8/28/07 - fix bugs introduced in About dialog
8/28/07 - replace stuff in copy of phetcommon with actual phetcommon (Sam Reid)
8/28/07 - remove unused files from copy of phetcommon (Sam Reid)
# 1.01.00 (17033)
7/27/07 - new version published as part of new website deployment
7/5/07 - fixed repaint problem in ApparatusPanel2
7/2/07 - wrap the body of main in invokeLater