@@ -24,6 +24,7 @@ import edu.colorado.phet.common.phetcommon.model.clock.SwingClock;
 import edu.colorado.phet.common.phetcommon.view.util.VisibleColor;
 import edu.colorado.phet.common.phetgraphics.application.PhetGraphicsModule;
 import edu.colorado.phet.common.phetgraphics.view.ApparatusPanel2;
+import edu.colorado.phet.common.phetgraphics.view.ApparatusPanel3;
 
 /**
  * RgbBulbsModule implements the simulation module that demonstrates how color
@@ -189,7 +190,8 @@ public class RgbBulbsModule extends PhetGraphicsModule implements ChangeListener
         this.setControlPanel( new RgbBulbsControlPanel() );
 
         // Apparatus Panel
-        ApparatusPanel2 apparatusPanel = new ApparatusPanel2( getClock() );
+        // Use ApparatusPanel 3 to improve support for low resolution screens.  The size was sampled at runtime by using ApparatusPanel2 with TransformManager.DEBUG_OUTPUT_ENABLED=true on large screen size, see #2860
+        ApparatusPanel2 apparatusPanel = new ApparatusPanel3( getClock(), 858, 630 );
         apparatusPanel.setBackground( APPARATUS_BACKGROUND );
         this.setApparatusPanel( apparatusPanel );
 
