@@ -1,3 +1,4 @@
+Use ApparatusPanel3 to improve support for low resolution screens, see #2860
 5/9/11 #2862, reimplement color intensity slider in phetgraphics, so that it scales
 Added a (commented-out) solution for making sure the simulation panel comes up at the right size initially, even on low-res platforms such as netbooks, see #2860
 Removed the gray panel on the right, which had no controls in it
